INTYGFV-16290: Update how we initiaze immutable list.