@@ -1,6 +1,7 @@
 package se.inera.intyg.certificateservice.domain.certificate.model;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import lombok.Builder;
@@ -21,7 +22,7 @@ public class Certificate {
   private final LocalDateTime created;
   private CertificateMetaData certificateMetaData;
   @Builder.Default
-  private List<ElementData> elementData = List.of();
+  private List<ElementData> elementData = Collections.emptyList();
 
   public List<CertificateAction> actions(ActionEvaluation actionEvaluation) {
     return certificateModel.actions().stream()
